fix: set flex-shrink of .ant-tree-node-content-wrapper to 0, to prevent overflow wrap

--- a/components/tree/style/mixin.less
+++ b/components/tree/style/mixin.less
@@ -151,6 +151,7 @@
 
   // >>> Title
   & &-node-content-wrapper {
+    flex-shrink: 0;
     min-height: @tree-title-height;
     margin: 0;
     padding: 0 4px;
